# aoc24

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
.github/workflows/: pr-pipeline.yaml
src/aoc24/: __about__.py
src/aoc24/cli/: __init__.py
src/aoc24/days/: eighth.py  fifth.py  first.py  fourth.py  second.py  sixth.py  third.py
tests/: __init__.py  conftest.py
tests/aoc24/days/: fifth_test.py  first_test.py  fourth_test.py  ninth_test.py  second_test.py  seventh_test.py  sixth_test.py  third_test.py
