# SPDX-FileCopyrightText: 2024-present Chris Butler <chris@thebutlers.me>
#
# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc24"
dynamic = ["version"]
description = 'advent of code 2024'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ['ray', 'advent of code']
authors = [
  { name = "Chris Butler", email = "chris@thebutlers.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer",
  "rich",
  "ray[all]",
  "modin",
  "num2words"
]

[project.urls]
Documentation = "https://github.com/butler54/aoc24#readme"
Issues = "https://github.com/butler54/aoc24/issues"
Source = "https://github.com/butler54/aoc24"


[project.scripts]
aoc = "aoc24.cli:cli"

[tool.hatch.version]
path = "src/aoc24/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aoc24 tests}"

[tool.coverage.run]
source_pkgs = ["aoc24", "tests"]
branch = true
parallel = true
omit = [
  "src/aoc24/__about__.py",
]

[tool.coverage.paths]
aoc24 = ["src/aoc24", "*/aoc24/src/aoc24"]
tests = ["tests", "*/aoc24/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
